@@ -149,6 +149,20 @@
       </para></answer>
     </qandaentry>
 	
+	<qandaentry>
+		<question id="general-borders">
+			<para>
+			    Why is jEdit's window movement and resizing so buggy?
+			</para>
+		</question>
+		<answer>
+			<para>
+			    Perhaps the option to let Java draw window borders is
+				enabled. This option can lead to strange behavior on some Java versions and operating systems. Disable it in the <guilabel>Appearance</guilabel> tab of the <guimenu>Utilities</guimenu>&gt;<guimenuitem>Global Options</guimenuitem> dialog box.
+			</para>
+		</answer>
+	</qandaentry>
+	
     <qandaentry>
       <question id="install-no-such-file"><para>
         What should I do when the installer displays the message,
@@ -486,6 +500,20 @@
 				in the value of your <filename>PATH</filename> environment variable.
 				Otherwise you should give the full path to the chosen loader on your command line.
 			</para>
+		</answer>
+	</qandaentry>
+	
+	<qandaentry>
+		<question id="general-windows-ddraw">
+			<para>
+			    When I run jEdit on Windows, it flashes, blinks, and doesn't display correctly! Why is your program so buggy?
+			</para>
+		</question>
+		<answer>
+			<para>
+			    A frequent cause of this problem is buggy video drivers and/or a buggy DirectDraw implementation. A workaround is to disable Java's use of DirectDraw by adding the following option to the Java virtual machine command line:
+			</para>
+			<programlisting>-Dsun.java2d.noddraw=true</programlisting>
 		</answer>
 	</qandaentry>
 </qandadiv>
